# py-dom-xpath-six

./: .gitignore  .travis.yml  LICENSE  README  README.md
.github/workflows/: tox.yml
XPath/: LICENSE  README  README.md  ez_setup.py  pyproject.toml  setup.cfg  setup.py  tox.ini
XPath/doc/: conf.py
XPath/tests/: abbreviations.py  api.py  axes.py  data.py  expressions.py  functions.py  nodetests.py  paths.py  predicates.py  repr.py  test_abbreviations.py  test_api.py  test_axes.py  test_data.py  test_elementpath_compare.py  test_expressions.py  test_functions.py  test_namespaces_examples.py  test_nodetests.py  test_paths.py  test_predicates.py  test_repr.py  test_unsupported_xpath2.py  test_w3c_more.py  test_w3c_public.py  test_xmlunittest_examples.py
XPath/tests/w3c_data/: books.xml  ns_books.xml  testcases.json  testcases_more.json
XPath/xpath/: __init__.py  exceptions.py  expr.py  parser.g  parser.py  yappsrt.py
XPath/yapps2/: parsedesc.py  yapps2.patch  yapps2.py  yappsrt.py
tests/: __init__.py  test_abbreviations.py  test_api.py  test_axes.py  test_expressions.py  test_functions.py  test_predicates.py  test_repr.py
