[metadata]
name = py-dom-xpath-six
version = 0.2.4
author = Damien Neil
author_email = damien.neil@gmail.com
maintainer = Jack Jansen
maintainer_email = Jack.Jansen@cwi.nl
description = XPath for DOM trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackjansen/py-dom-xpath-six
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
	Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: XML

[options.extras_require]
test =
    pytest
